# workshop2-lvgalvao

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  testes.py
.github/workflows/: ci.yml
app/: main.py
tests/: __init__.py  test_api.py
