[tool.poetry]
name = "workshop2"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskipy = "^1.12.2"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
black = "^24.3.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pre-commit = "^3.7.0"
bandit = "^1.7.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn main:app --reload"
test = "pytest -v testes.py"
format = "black . && isort ."
check = "pydocstyle && bandit ."
